# IROS19-Human-Robot-Coupling

./: LICENSE  README.md
podi_nav_core/: CMakeLists.txt  package.xml
podi_nav_core/include/podi_nav_core/: base_global_planner.h
podi_navigation_helpers/: CMakeLists.txt  package.xml
podi_navigation_helpers/include/podi_navigation_helpers/: costmap_model.h  couplingModel.h  grid.h  line_iterator.h  robot.h  world_model.h
podi_navigation_helpers/src/: costmap_model.cpp  couplingModel.cpp  couplingModelNode.cpp  grid.cpp  robot.cpp  testCouplingModel.cpp  testGrid.cpp
podi_navigation_helpers/srv/: PodiMakeNavPlan.srv
podi_robot_human_coupled_planner/: CMakeLists.txt  package.xml  robot_human_coupled_planner_plugin.xml
podi_robot_human_coupled_planner/include/podi_robot_human_coupled_planner/: node.h  planner.h  planner_core.h
podi_robot_human_coupled_planner/src/: node.cpp  plan_node.cpp  planner.cpp  planner_core.cpp
