<package>
  <name>podi_robot_human_coupled_planner</name>
  <version>1.14.0</version>
  <description>
     A path planner library and node.
  </description>
  <maintainer email="arnanava@alumni.cmu.edu">Amal Nanavati</maintainer>
  <license>BSD</license>

  <author>Amal Nanavati</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>podi_nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>podi_navigation_helpers</build_depend>

  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>podi_nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>podi_navigation_helpers</run_depend>

  <export>
      <podi_nav_core plugin="${prefix}/robot_human_coupled_planner_plugin.xml" />
  </export>
</package>
